demo/src/main/java/com/example/demo/Util/Error/IDInvalidException.java
package com.example.demo.Util.Error;

public class IDInvalidException extends Exception {
    public IDInvalidException(String message)
    {
        super(message);
    }
}
